--- a/package.json
+++ b/package.json
@@ -1,9 +1,36 @@
 {
     "name": "postcss-managed-media",
-    "version": "0.0.1",
+    "version": "0.0.2-alpha.0",
     "description": "Really custom media in CSS",
     "main": "dist/index.js",
     "repository": "https://github.com/miyamarisubs/postcss-custom-media",
     "author": "Marina Miyaoka <miyaokamarina@gmail.com> (https://t.me/miyaokamarina)",
-    "license": "MIT"
+    "license": "MIT",
+    "scripts": {
+        "watch": "webpack-serve ./serve.config.js",
+        "build": "babel -o ./dist/index.js ./src/plugin.ts",
+        "postinstall": "mkdirp build coverage cache dist temp var build",
+        "clean": "rimraf build coverage cache dist temp var build",
+        "postclean": "yarn run postinstall",
+        "clean-dist": "rimraf \"dist/**/*\""
+    },
+    "dependencies": {
+        "@babel/polyfill": "^7.0.0-beta.46",
+        "postcss": "^6.0.22",
+        "postcss-value-parser": "^3.3.0"
+    },
+    "devDependencies": {
+        "@babel/cli": "^7.0.0-beta.46",
+        "@babel/core": "^7.0.0-beta.46",
+        "@babel/preset-env": "^7.0.0-beta.46",
+        "@babel/preset-stage-0": "^7.0.0-beta.46",
+        "@babel/preset-typescript": "^7.0.0-beta.46",
+        "babel-loader": "^8.0.0-beta.2",
+        "html-webpack-plugin": "^3.2.0",
+        "prettier": "^1.12.1",
+        "typescript": "^2.8.3",
+        "webpack": "^4.8.1",
+        "webpack-cli": "^2.1.3",
+        "webpack-serve": "^0.3.2"
+    }
 }
