--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "postcss-managed-media",
-    "version": "0.0.2-alpha.0",
+    "version": "0.0.2-alpha.1",
     "description": "Really custom media in CSS",
     "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "repository": "https://github.com/miyamarisubs/postcss-custom-media",
     "author": "Marina Miyaoka <miyaokamarina@gmail.com> (https://t.me/miyaokamarina)",
     "license": "MIT",
     "scripts": {
-        "watch": "webpack-serve ./serve.config.js",
-        "build": "babel -o ./dist/index.js ./src/plugin.ts",
+        "build": "babel -o ./dist/index.js ./src/index.ts && tsc -d --emitDeclarationOnly --declarationDir ./dist/ ./src/index.ts",
         "postinstall": "mkdirp build coverage cache dist temp var build",
         "clean": "rimraf build coverage cache dist temp var build",
         "postclean": "yarn run postinstall",
@@ -25,12 +25,7 @@
         "@babel/preset-env": "^7.0.0-beta.46",
         "@babel/preset-stage-0": "^7.0.0-beta.46",
         "@babel/preset-typescript": "^7.0.0-beta.46",
-        "babel-loader": "^8.0.0-beta.2",
-        "html-webpack-plugin": "^3.2.0",
         "prettier": "^1.12.1",
-        "typescript": "^2.8.3",
-        "webpack": "^4.8.1",
-        "webpack-cli": "^2.1.3",
-        "webpack-serve": "^0.3.2"
+        "typescript": "^2.8.3"
     }
 }
